# PeopleWatcher

./: README.md  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/galover/media/peoplewatcher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/c/: generalUtils.c  generalUtils.h  imageUtils.c  imageUtils.h
app/src/main/cpp/: AsyncIO.cpp  AsyncIO.h  Encoder.cpp  Encoder.h  Engine.cpp  Engine.h  EngineJNI.cpp  FFmpegUtils.cpp  FFmpegUtils.h  MotionDetection.cpp  MotionDetection.h  MotionDetector.cpp  MotionDetector.h  exceptionUtils.cpp  exceptionUtils.h  ffmpegUtils.cpp  ffmpegUtils.h  imageUtils.cpp  imageUtils.h
app/src/main/java/com/galover/media/peoplewatcher/: EngineManager.java  MainActivity.java  MainService.java  MyCameraManager.java  MyWakefulReceiver.java  SimpleService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/galover/media/peoplewatcher/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
icons/: icon_background_color
prebuilt/include/libavutil/: ffversion.h
prebuilt/include/opencv2/: cvconfig.h  opencv_modules.hpp
